--- a/example/Makefile
+++ b/example/Makefile
@@ -9,5 +9,10 @@ ifndef OF_ROOT
     OF_ROOT=../../..
 endif
 
+MAKEFILE_DEBUG=1
+
 # call the project makefile!
 include $(OF_ROOT)/libs/openFrameworksCompiled/project/makefileCommon/compile.project.mk
+
+# ALL_CFLAGS += -DDISABLE_HEADERONLY -std=c++11
+ALL_CFLAGS += -std=c++11
