--- a/example-visualize/example.cbp
+++ b/example-visualize/example.cbp
@@ -1,48 +1,159 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8" standalone="yes" ?>
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="emptyExample" />
-		<Option makefile_is_custom="1" />
+		<Option title="OpenGP visualize example" />
+		<Option makefile="makefile" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
-		<Option virtualFolders="addons/;src/;build config/;" />
+		<Option virtualFolders="addons\;src\;" />
 		<Build>
-			<Target title="Debug">
-				<Option output="bin/$(PROJECT_NAME)_debug" prefix_auto="1" extension_auto="1" />
-				<Option working_dir="bin" />
-				<Option object_output="obj/Debug/" />
-				<Option external_deps="../../../libs/openFrameworksCompiled/lib/linux64/libopenFrameworksDebug.a;" />
-				<Option type="1" />
-				<Option compiler="gcc" />
-				<Option projectLinkerOptionsRelation="2" />
-			</Target>
-			<Target title="Release">
+			<Target title="release">
 				<Option output="bin/$(PROJECT_NAME)" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="bin" />
-				<Option object_output="obj/Release/" />
-				<Option external_deps="../../../libs/openFrameworksCompiled/lib/linux64/libopenFrameworks.a;" />
+				<Option object_output="obj/Release" />
+				<Option external_deps="../../../libs/openFrameworksCompiled/lib/win_cb/openFrameworks.lib;" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Option projectLinkerOptionsRelation="2" />
+				<Compiler>
+					<Add option="-O2" />
+					<Add directory="../src" />
+					<Add directory="../libs/OpenGP/src" />
+				</Compiler>
+				<Linker>
+					<Add option="-s" />
+					<Add option="../../../libs/openFrameworksCompiled/lib/win_cb/openFrameworks.lib" />
+				</Linker>
+			</Target>
+			<Target title="debug">
+				<Option output="bin/$(PROJECT_NAME)_DEBUG" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="bin" />
+				<Option object_output="obj/Debug/" />
+				<Option external_deps="../../../libs/openFrameworksCompiled/lib/win_cb/openFrameworksDebug.lib;" />
+				<Option type="1" />
+				<Option compiler="gcc" />
+				<Option projectLinkerOptionsRelation="2" />
+				<Compiler>
+					<Add option="-g" />
+				</Compiler>
+				<Linker>
+					<Add option="../../../libs/openFrameworksCompiled/lib/win_cb/openFrameworksDebug.lib" />
+				</Linker>
 			</Target>
 		</Build>
-		<Unit filename="config.make">
-			<Option virtualFolder="build config" />
-		</Unit>
+		<Compiler>
+			<Add option="-Wno-multichar" />
+			<Add directory="../../../libs/glu/include" />
+			<Add directory="../../../libs/freetype/include" />
+			<Add directory="../../../libs/freetype/include/freetype2" />
+			<Add directory="../../../libs/FreeImage/include" />
+			<Add directory="../../../libs/quicktime/include" />
+			<Add directory="../../../libs/rtAudio/include" />
+			<Add directory="../../../libs/fmodex/include" />
+			<Add directory="../../../libs/videoInput/include" />
+			<Add directory="../../../libs/glew/include" />
+			<Add directory="../../../libs/glut/include" />
+			<Add directory="../../../libs/glfw/include" />
+			<Add directory="../../../libs/openFrameworks" />
+			<Add directory="../../../libs/openFrameworks/3d" />
+			<Add directory="../../../libs/openFrameworks/app" />
+			<Add directory="../../../libs/openFrameworks/communication" />
+			<Add directory="../../../libs/openFrameworks/events" />
+			<Add directory="../../../libs/openFrameworks/gl" />
+			<Add directory="../../../libs/openFrameworks/graphics" />
+			<Add directory="../../../libs/openFrameworks/math" />
+			<Add directory="../../../libs/openFrameworks/sound" />
+			<Add directory="../../../libs/openFrameworks/types" />
+			<Add directory="../../../libs/openFrameworks/utils" />
+			<Add directory="../../../libs/openFrameworks/video" />
+			<Add directory="../../../libs/poco/include" />
+			<Add directory="../../../libs/tess2/include" />
+			<Add directory="../../../libs/cairo/include/cairo" />
+			<Add directory="src" />
+		</Compiler>
+		<Linker>
+			<Add library="..\..\..\libs\FreeImage\lib\win_cb\FreeImage.lib" />
+			<Add library="..\..\..\libs\rtAudio\lib\win_cb\librtaudio.a" />
+			<Add library="..\..\..\libs\quicktime\lib\win_cb\qtmlClient.lib" />
+			<Add library="..\..\..\libs\cairo\lib\win_cb\libcairo.a" />
+			<Add library="..\..\..\libs\cairo\lib\win_cb\libpixman-1.a" />
+			<Add library="..\..\..\libs\freetype\lib\win_cb\libfreetype.a" />
+			<Add library="..\..\..\libs\glut\lib\win_cb\libglut.a" />
+			<Add library="..\..\..\libs\glfw\lib\win_cb\libglfw3.a" />
+			<Add library="..\..\..\libs\videoInput\lib\win_cb\videoInputLib.a" />
+			<Add library="..\..\..\libs\fmodex\lib\win_cb\libfmodex.a" />
+			<Add library="..\..\..\libs\glew\lib\win_cb\glew32s.lib" />
+			<Add library="..\..\..\libs\glu\lib\win_cb\glu32.lib" />
+			<Add library="..\..\..\libs\poco\lib\win_cb\libPocoNetSSL.a" />
+			<Add library="..\..\..\libs\poco\lib\win_cb\libPocoCrypto.a" />
+			<Add library="..\..\..\libs\poco\lib\win_cb\libPocoNet.a" />
+			<Add library="..\..\..\libs\poco\lib\win_cb\libPocoUtil.a" />
+			<Add library="..\..\..\libs\poco\lib\win_cb\libPocoXML.a" />
+			<Add library="..\..\..\libs\poco\lib\win_cb\libPocoFoundation.a" />
+			<Add library="..\..\..\libs\openssl\lib\win_cb\libssl.a" />
+			<Add library="..\..\..\libs\openssl\lib\win_cb\libcrypto.a" />
+			<Add library="..\..\..\libs\tess2\lib\win_cb\libtess2.a" />
+			<Add library="opengl32" />
+			<Add library="gdi32" />
+			<Add library="msimg32" />
+			<Add library="glu32" />
+			<Add library="dsound" />
+			<Add library="winmm" />
+			<Add library="dxguid" />
+			<Add library="strmbase" />
+			<Add library="strmiids" />
+			<Add library="z" />
+			<Add library="uuid" />
+			<Add library="ole32" />
+			<Add library="oleaut32" />
+			<Add library="setupapi" />
+			<Add library="wsock32" />
+			<Add library="ws2_32" />
+			<Add library="Iphlpapi" />
+			<Add library="Comdlg32" />
+		</Linker>
+		<ExtraCommands>
+			<Add after='xcopy /e /i /y &quot;$(PROJECT_DIR)..\..\..\export\win_cb\*.dll&quot;  &quot;$(PROJECT_DIR)bin&quot;' />
+			<Add after='cmd /c if not exist &quot;$(PROJECT_DIR)bin/data&quot; mkdir &quot;$(PROJECT_DIR)bin/data&quot;' />
+			<Mode after="always" />
+		</ExtraCommands>
+		<Unit filename="../libs/OpenGP/src/OpenGP/CGAL/AABBSearcher.h" />
+		<Unit filename="../libs/OpenGP/src/OpenGP/GL/EigenOpenGLSupport3.h" />
+		<Unit filename="../libs/OpenGP/src/OpenGP/GL/Trackball.h" />
+		<Unit filename="../libs/OpenGP/src/OpenGP/GL/glfw_helpers.h" />
+		<Unit filename="../libs/OpenGP/src/OpenGP/GL/glfw_trackball.h" />
+		<Unit filename="../libs/OpenGP/src/OpenGP/GL/opengl_helpers.h" />
+		<Unit filename="../libs/OpenGP/src/OpenGP/GL/shader_helpers.h" />
+		<Unit filename="../libs/OpenGP/src/OpenGP/Global_properties.h" />
+		<Unit filename="../libs/OpenGP/src/OpenGP/NullStream.h" />
+		<Unit filename="../libs/OpenGP/src/OpenGP/Surface_mesh.h" />
+		<Unit filename="../libs/OpenGP/src/OpenGP/headeronly.h" />
+		<Unit filename="../libs/OpenGP/src/OpenGP/properties.h" />
+		<Unit filename="../libs/OpenGP/src/OpenGP/qglviewer/QGLMeshLabViewer.h" />
+		<Unit filename="../libs/OpenGP/src/OpenGP/qglviewer/helpers.h" />
+		<Unit filename="../libs/OpenGP/src/OpenGP/surface_mesh/IO.h" />
+		<Unit filename="../libs/OpenGP/src/OpenGP/surface_mesh/Vector.h" />
+		<Unit filename="../libs/OpenGP/src/OpenGP/surface_mesh/Vector_back_compatibility.h" />
+		<Unit filename="../libs/OpenGP/src/OpenGP/surface_mesh/bounding_box.h" />
+		<Unit filename="../libs/OpenGP/src/OpenGP/surface_mesh/eigen.h" />
+		<Unit filename="../libs/OpenGP/src/OpenGP/surface_mesh/remesh.h" />
+		<Unit filename="../libs/OpenGP/src/OpenGP/types.h" />
+		<Unit filename="../src/ofxOpenGP.cpp" />
+		<Unit filename="../src/ofxOpenGP.h" />
 		<Unit filename="src/main.cpp">
-			<Option virtualFolder="src/" />
+			<Option virtualFolder="src" />
 		</Unit>
 		<Unit filename="src/ofApp.cpp">
-			<Option virtualFolder="src/" />
+			<Option virtualFolder="src" />
 		</Unit>
 		<Unit filename="src/ofApp.h">
-			<Option virtualFolder="src/" />
+			<Option virtualFolder="src" />
 		</Unit>
 		<Extensions>
 			<code_completion />
-			<envvars />
 			<debugger />
+			<envvars />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
